<resources>
    <string name="app_name">My PCC</string>
    <string name="home">Home</string>
    <string name="books">Books</string>
    <string name="scriptures">Scriptures</string>
    <string name="church_information">Church Information</string>
    <string name="about">About</string>
    <string name="diary">Diary</string>
    <string name="favorite">Favorite</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="church_diary">CHURCH DIARY</string>
    <string name="church_hymn_book">CHURCH HYMN BOOK</string>
    <string name="books_and_magazines">BOOKS &amp; MAGAZINES</string>
    <string name="sound">Sound</string>
    <string name="share">Share</string>
    <string name="find">find</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_your_account">Create your account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="action_sign_up">CREATE ACCOUNT</string>
</resources>