<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/favorite_icon"
        android:orderInCategory="0"
        android:title="@string/favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/sound"
        android:icon="@android:drawable/ic_media_play"
        android:orderInCategory="0"
        android:title="@string/sound"
        app:showAsAction="always" />
    <item
        android:id="@+id/share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="1"
        android:title="@string/share"
        app:showAsAction="always" />
    <item
        android:id="@+id/about"
        android:orderInCategory="3"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>