<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:src="@mipmap/ic_launcher_foreground"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin20"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/emailSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/prompt_telephone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="4dp"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textSize="22sp"
                android:layout_margin="4dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                />

            <!--<Button
                android:layout_margin="4dp"
                android:background="#3B5998"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/fb"
                android:textAllCaps="false"
                android:text="@string/sign_in_with_facebook"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:onClick="signInWithFacebook"/>-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_an_account"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:layout_marginTop="@dimen/margin16"
                android:clickable="true"
                android:onClick="createAccount"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>